--- a/style.css
+++ b/style.css
@@ -1,3 +1,30 @@
-h1 {
-  color: red;
+* {
+  margin: 0;
+  padding: 0;
+}
+body {
+  background-image: url("img/bg.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+.main-box{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+}
+.container{
+    width: 50%;
+    margin: 20px auto;
+    backdrop-filter: blur(4px);
+    min-height: 400px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(0, 255, 255, 0.248);
+}
+h2{
+    color: rgba(43, 30, 30, 0.575);
+    font-size: 34px;
 }
