--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ body {
     background-color: rgba(0, 255, 255, 0.248);
 }
 h2{
-    color: rgba(43, 30, 30, 0.575);
-    font-size: 34px;
+    color: rgba(20, 3, 3, 0.783);
+    font-size: 54px;
+    font-weight: 600;
 }
