--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
     background-color: rgba(0, 255, 255, 0.248);
 }
 h2{
