--- a/style.css
+++ b/style.css
@@ -5,28 +5,38 @@
 body {
   background-image: url("img/bg.jpg");
   background-repeat: no-repeat;
+  background-attachment: fixed;
   background-position: center;
   background-size: cover;
 }
-.main-box{
+.main-box {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+}
+.container {
+  width: 50%;
+  margin: 20px auto;
+  backdrop-filter: blur(4px);
+  min-height: 400px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  background-color: rgba(0, 255, 255, 0.248);
+}
+h2 {
+  color: rgba(20, 3, 3, 0.783);
+  font-size: 54px;
+  font-weight: 600;
+}
+footer{
+    min-height: 600px;
+    background-color: rgba(0, 0, 255, 0.231);
     display: flex;
     align-items: center;
     justify-content: center;
-    min-height: 100vh;
-}
-.container{
-    width: 50%;
-    margin: 20px auto;
-    backdrop-filter: blur(4px);
-    min-height: 400px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    background-color: rgba(0, 255, 255, 0.248);
-}
-h2{
-    color: rgba(20, 3, 3, 0.783);
-    font-size: 54px;
-    font-weight: 600;
+    font-size: 45px;
+    font-weight: 900px;
 }
